Change z-index to avoid problems

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -228,7 +228,7 @@
     position: fixed;
     bottom: 30px;
     right: 10px;
-    // z-index: 1000000;
+    z-index: 10000;
     width: 60px;
     height: 60px;
     cursor: pointer;
